# PythonQuizDemo

./: LICENSE.md  MANIFEST.in  README.md  setup.cfg
PythonQuizDemo/: __init__.py
PythonQuizDemo/auth/: models.py  views.py
PythonQuizDemo/blog/: models.py  views.py
PythonQuizDemo/quiz/: models.py  views.py
PythonQuizDemo/templates/: base.html
PythonQuizDemo/templates/quiz/: create.html  create_wtf.html  index.html  update.html
