[metadata]
name = PythonQuizDemo
version = attr: PythonQuizDemo.__version__
url = https://github.com/UTCSheffield/PythonQuizDemo
author = UTC Sheffield after Pallets
author_email = computing@utcsheffield.org.uk
license = BSD-3-Clause
license_file = LICENSE.rst
description = A basic quiz app built with Flask-SQLAlchemy.
long_description = file: README.md

[options]
packages = find:
include_package_data = true
python_requires = >= 3.7
install_requires =
    Flask>=2.2
    Flask-SQLAlchemy>=3
    SQLAlchemy>=1.4.18

[options.extras_require]
test =
    pytest
    coverage

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = PythonQuizDemo
